tests/NormalTests/paczka1/small_fuzzy/32933797.err
Error in line 1: SHCuIJ6 A382 95,8
Error in line 6: SHCuIJ6 A505 37,9
Error in line 10: Md2GiAF A505 48,4
